# selene_demo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BEFORE_AFTER_COMPARISON.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIRECTORY_STRUCTURE.md  Dockerfile  LICENSE  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  app.py  chat_db.py  config.py  context_builder.py  data_manager.py  import_chroma.py  import_to_local_db.py  ingest_me.json  insights_generator.py  insights_generator_hybrid.py  med_logic.py  med_rag_app.py  navigation.py  onboarding.py  pdf_extractor.py  prepare_export_file.py  pyproject.toml  query_med_db.py  rapid_pulse_roadmap.md  requirements.txt  run_selene.py  selene_multipage_shell.py  selene_writeup.md  setup_project.sh  (+3 more)
.github/: DIRECTORY_OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: README.md
data/metadata/: stages.json
data/user_data/: pulse_history.json  user_profile.json
data/user_data/user_med_db/: chroma.sqlite3
docs/: README.md  technical_reference.md
examples/: README.md  basic_usage.py
output/: chromadb_export.json  medgemma_kb_20260220_093712.json
scripts/: README.md  pdf_processor_medgemma.py  setup_project.sh  update_kb_chroma.py
src/selene/: __init__.py  __main__.py  config.py  constants.py  settings.py
src/selene/core/: __init__.py  context_builder.py  context_builder_multi_agent.py  deterministic_analysis.py  insights_generator.py  med_logic.py
src/selene/storage/: __init__.py  chat_db.py  data_manager.py
src/selene/ui/: __init__.py  app.py  navigation.py  onboarding.py  styles.py
src/selene/ui/views/: __init__.py  chat.py  clinical.py  home.py  pulse.py
tests/: README.md  test_context_builder.py  test_deterministic_analysis.py  test_med_logic_cache.py
user_data/: pulse_history.json  user_profile.json
user_data/user_med_db/: chroma.sqlite3
user_med_db/: chroma.sqlite3
views/: __init__.py  chat.py  clinical.py  home.py  home_how  pulse.py
